--- a/assets/scss/04-base/_base.document.scss
+++ b/assets/scss/04-base/_base.document.scss
@@ -10,3 +10,7 @@ html, body {
   box-sizing: inherit;
   font-family: $font-stack--sans;
 }
+
+body {
+  overflow-x: hidden;
+}
