--- a/assets/scss/06-components/_components.sections.scss
+++ b/assets/scss/06-components/_components.sections.scss
@@ -3,8 +3,8 @@
 // ------------------------------------------------------------------
 
 main.body {
-  width: 100vw;
-  overflow-x: hidden;
+  // width: 100%;
+  // overflow-x: hidden;
 }
 
 .section {
